--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
             flex-wrap: wrap;
         }
 
+        .pup-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            animation: float 2s ease-in-out infinite;
+        }
+
+        .pup-container:nth-child(1) { animation-delay: 0s; }
+        .pup-container:nth-child(2) { animation-delay: 0.2s; }
+        .pup-container:nth-child(3) { animation-delay: 0.4s; }
+        .pup-container:nth-child(4) { animation-delay: 0.6s; }
+        .pup-container:nth-child(5) { animation-delay: 0.8s; }
+        .pup-container:nth-child(6) { animation-delay: 1s; }
+
         .pup {
             width: 70px;
             height: 70px;
@@ -122,13 +136,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 32px;
-            animation: float 2s ease-in-out infinite;
+            font-size: 40px;
             box-shadow: 
                 0 5px 15px rgba(0,0,0,0.3),
                 inset 0 -5px 10px rgba(0,0,0,0.2),
                 inset 0 5px 10px rgba(255,255,255,0.3);
-            border: 4px solid rgba(255,255,255,0.8);
+            border: 4px solid rgba(255,255,255,0.9);
             position: relative;
             overflow: hidden;
         }
@@ -144,70 +157,50 @@
             border-radius: 50%;
         }
 
-        /* Chase - Police Pup - Blue */
-        .pup:nth-child(1) { 
-            background: linear-gradient(145deg, #1976d2, #0d47a1);
-            animation-delay: 0s; 
+        .pup span {
+            position: relative;
+            z-index: 1;
+            filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.3));
         }
-        .pup:nth-child(1)::after {
-            content: '🚓';
-            font-size: 32px;
-            filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
+
+        .pup-name {
+            margin-top: 8px;
+            font-size: 12px;
+            font-weight: bold;
+            color: white;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+            font-family: 'Fredoka One', cursive;
+            letter-spacing: 1px;
+        }
+
+        /* Chase - Police Pup - Blue */
+        .pup-container:nth-child(1) .pup { 
+            background: linear-gradient(145deg, #1976d2, #0d47a1);
         }
 
         /* Marshall - Fire Pup - Red */
-        .pup:nth-child(2) { 
+        .pup-container:nth-child(2) .pup { 
             background: linear-gradient(145deg, #e53935, #b71c1c);
-            animation-delay: 0.2s; 
-        }
-        .pup:nth-child(2)::after {
-            content: '🚒';
-            font-size: 32px;
-            filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
         }
 
         /* Rubble - Construction Pup - Yellow */
-        .pup:nth-child(3) { 
+        .pup-container:nth-child(3) .pup { 
             background: linear-gradient(145deg, #fdd835, #f9a825);
-            animation-delay: 0.4s; 
-        }
-        .pup:nth-child(3)::after {
-            content: '🚜';
-            font-size: 32px;
-            filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
         }
 
         /* Zuma - Water Pup - Orange */
-        .pup:nth-child(4) { 
+        .pup-container:nth-child(4) .pup { 
             background: linear-gradient(145deg, #ff9800, #e65100);
-            animation-delay: 0.6s; 
-        }
-        .pup:nth-child(4)::after {
-            content: '🚤';
-            font-size: 32px;
-            filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
         }
 
         /* Rocky - Recycling Pup - Green */
-        .pup:nth-child(5) { 
+        .pup-container:nth-child(5) .pup { 
             background: linear-gradient(145deg, #4caf50, #2e7d32);
-            animation-delay: 0.8s; 
-        }
-        .pup:nth-child(5)::after {
-            content: '🔧';
-            font-size: 32px;
-            filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
         }
 
         /* Skye - Air Pup - Pink */
-        .pup:nth-child(6) { 
+        .pup-container:nth-child(6) .pup { 
             background: linear-gradient(145deg, #e91e63, #c2185b);
-            animation-delay: 1s; 
-        }
-        .pup:nth-child(6)::after {
-            content: '🚁';
-            font-size: 32px;
-            filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
         }
 
         @keyframes float {
@@ -516,12 +509,30 @@
             <div class="age-highlight">🎂 Turning 6! 🎂</div>
             
             <div class="pups-container">
-                <div class="pup" title="Chase"></div>
-                <div class="pup" title="Marshall"></div>
-                <div class="pup" title="Rubble"></div>
-                <div class="pup" title="Zuma"></div>
-                <div class="pup" title="Rocky"></div>
-                <div class="pup" title="Skye"></div>
+                <div class="pup-container">
+                    <div class="pup"><span>🐕</span></div>
+                    <div class="pup-name">CHASE</div>
+                </div>
+                <div class="pup-container">
+                    <div class="pup"><span>🐕</span></div>
+                    <div class="pup-name">MARSHALL</div>
+                </div>
+                <div class="pup-container">
+                    <div class="pup"><span>🐕</span></div>
+                    <div class="pup-name">RUBBLE</div>
+                </div>
+                <div class="pup-container">
+                    <div class="pup"><span>🐕</span></div>
+                    <div class="pup-name">ZUMA</div>
+                </div>
+                <div class="pup-container">
+                    <div class="pup"><span>🐕</span></div>
+                    <div class="pup-name">ROCKY</div>
+                </div>
+                <div class="pup-container">
+                    <div class="pup"><span>🐕</span></div>
+                    <div class="pup-name">SKYE</div>
+                </div>
             </div>
             
             <p style="color: white; font-size: 1.2em; margin-top: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
