Add PAW Patrol images to webpage

--- a/index.html
+++ b/index.html
@@ -448,6 +448,32 @@
             text-decoration: none;
         }
 
+        .pawpatrol-banner {
+            margin: 20px 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        .pawpatrol-img {
+            max-width: 100%;
+            max-height: 200px;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+        }
+
+        .pawpatrol-footer {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .pawpatrol-footer img {
+            max-width: 100%;
+            max-height: 150px;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+        }
+
         @media (max-width: 600px) {
             h1 {
                 font-size: 2em;
@@ -508,31 +534,8 @@
             <h1>Daniel's Birthday Party!</h1>
             <div class="age-highlight">🎂 Turning 6! 🎂</div>
             
-            <div class="pups-container">
-                <div class="pup-container">
-                    <div class="pup"><span>🐕</span></div>
-                    <div class="pup-name">CHASE</div>
-                </div>
-                <div class="pup-container">
-                    <div class="pup"><span>🐕</span></div>
-                    <div class="pup-name">MARSHALL</div>
-                </div>
-                <div class="pup-container">
-                    <div class="pup"><span>🐕</span></div>
-                    <div class="pup-name">RUBBLE</div>
-                </div>
-                <div class="pup-container">
-                    <div class="pup"><span>🐕</span></div>
-                    <div class="pup-name">ZUMA</div>
-                </div>
-                <div class="pup-container">
-                    <div class="pup"><span>🐕</span></div>
-                    <div class="pup-name">ROCKY</div>
-                </div>
-                <div class="pup-container">
-                    <div class="pup"><span>🐕</span></div>
-                    <div class="pup-name">SKYE</div>
-                </div>
+            <div class="pawpatrol-banner">
+                <img src="pawpatrol1.jpg" alt="PAW Patrol" class="pawpatrol-img">
             </div>
             
             <p style="color: white; font-size: 1.2em; margin-top: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
@@ -630,6 +633,10 @@
                 <p>Thank you! We can't wait to celebrate with you!<br>
                 A confirmation email has been sent to you.</p>
             </div>
+        </div>
+
+        <div class="pawpatrol-footer">
+            <img src="pawpatrol2.jpg" alt="PAW Patrol">
         </div>
 
         <div class="footer">
