--- a/index.html
+++ b/index.html
@@ -452,11 +452,13 @@
             margin: 20px 0;
             display: flex;
             justify-content: center;
+            gap: 15px;
+            flex-wrap: wrap;
         }
 
         .pawpatrol-img {
-            max-width: 100%;
-            max-height: 200px;
+            max-width: 45%;
+            max-height: 180px;
             border-radius: 15px;
             box-shadow: 0 5px 20px rgba(0,0,0,0.3);
         }
@@ -536,6 +538,7 @@
             
             <div class="pawpatrol-banner">
                 <img src="pawpatrol1.jpg" alt="PAW Patrol" class="pawpatrol-img">
+                <img src="pawpatrol2.jpg" alt="PAW Patrol" class="pawpatrol-img">
             </div>
             
             <p style="color: white; font-size: 1.2em; margin-top: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
@@ -633,10 +636,6 @@
                 <p>Thank you! We can't wait to celebrate with you!<br>
                 A confirmation email has been sent to you.</p>
             </div>
-        </div>
-
-        <div class="pawpatrol-footer">
-            <img src="pawpatrol2.jpg" alt="PAW Patrol">
         </div>
 
         <div class="footer">
