--- a/index.html
+++ b/index.html
@@ -459,8 +459,13 @@
         .pawpatrol-img {
             max-width: 45%;
             max-height: 180px;
-            border-radius: 15px;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+            border-radius: 20px;
+            box-shadow: 
+                0 8px 25px rgba(0,0,0,0.4),
+                0 0 0 4px rgba(255,255,255,0.3);
+            background: linear-gradient(145deg, #fff8e1, #ffecb3);
+            padding: 8px;
+            object-fit: contain;
         }
 
         .pawpatrol-footer {
