--- a/index.html
+++ b/index.html
@@ -450,16 +450,18 @@
 
         .pawpatrol-banner {
             margin: 20px 0;
-            display: flex;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
             gap: 15px;
-            flex-wrap: wrap;
+            max-width: 500px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .pawpatrol-img {
-            max-width: 45%;
-            max-height: 180px;
-            border-radius: 20px;
+            width: 100%;
+            height: 150px;
+            border-radius: 15px;
             box-shadow: 
                 0 8px 25px rgba(0,0,0,0.4),
                 0 0 0 4px rgba(255,255,255,0.3);
@@ -544,6 +546,8 @@
             <div class="pawpatrol-banner">
                 <img src="pawpatrol1.jpg" alt="PAW Patrol" class="pawpatrol-img">
                 <img src="pawpatrol2.jpg" alt="PAW Patrol" class="pawpatrol-img">
+                <img src="Skye-thumbnail.png" alt="Skye" class="pawpatrol-img">
+                <img src="paw-patrol-rocky-png-png-7.png" alt="Rocky" class="pawpatrol-img">
             </div>
             
             <p style="color: white; font-size: 1.2em; margin-top: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
