Update image references to new PNG files

--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
             <div class="age-highlight">🎂 Turning 6! 🎂</div>
             
             <div class="pawpatrol-banner">
-                <img src="pawpatrol1.jpg" alt="PAW Patrol" class="pawpatrol-img">
-                <img src="pawpatrol2.jpg" alt="PAW Patrol" class="pawpatrol-img">
+                <img src="marshall-paw-patrol-png-8.png" alt="Marshall" class="pawpatrol-img">
+                <img src="PP10_Chase1_Reduced.png" alt="Chase" class="pawpatrol-img">
             </div>
             
             <p style="color: white; font-size: 1.2em; margin-top: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
