Show 4 PAW Patrol images in a row without shadows

--- a/index.html
+++ b/index.html
@@ -452,15 +452,13 @@
             margin: 20px 0;
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 15px;
             flex-wrap: wrap;
         }
 
         .pawpatrol-img {
-            max-width: 45%;
-            max-height: 200px;
-            border-radius: 15px;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+            max-width: 22%;
+            max-height: 150px;
             object-fit: contain;
         }
 
@@ -540,6 +538,8 @@
             <div class="pawpatrol-banner">
                 <img src="marshall-paw-patrol-png-8.png" alt="Marshall" class="pawpatrol-img">
                 <img src="PP10_Chase1_Reduced.png" alt="Chase" class="pawpatrol-img">
+                <img src="Skye-thumbnail.png" alt="Skye" class="pawpatrol-img">
+                <img src="paw-patrol-rocky-png-png-7.png" alt="Rocky" class="pawpatrol-img">
             </div>
             
             <p style="color: white; font-size: 1.2em; margin-top: 10px; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
