Make PAW Patrol icons smaller on mobile screens

--- a/index.html
+++ b/index.html
@@ -462,6 +462,17 @@
             object-fit: contain;
         }
 
+        @media (max-width: 600px) {
+            .pawpatrol-img {
+                max-width: 20%;
+                max-height: 80px;
+            }
+            
+            .pawpatrol-banner {
+                gap: 8px;
+            }
+        }
+
         .pawpatrol-footer {
             margin-top: 20px;
             display: flex;
